// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VolumeControl renders at max volume 1`] = `
<div>
  <div
    class="flex flex-col items-center space-y-2"
  >
    <input
      class="w-32 h-2 bg-blue-400 rounded-lg appearance-none focus:outline-none focus:ring-2 focus:ring-blue-300"
      max="1"
      min="0"
      step="0.01"
      type="range"
      value="100"
    />
    <div
      class="text-gray-600 text-sm"
    >
      Volume: 
      10000
      %
    </div>
  </div>
</div>
`;

exports[`VolumeControl renders at min volume 1`] = `
<div>
  <div
    class="flex flex-col items-center space-y-2"
  >
    <input
      class="w-32 h-2 bg-blue-400 rounded-lg appearance-none focus:outline-none focus:ring-2 focus:ring-blue-300"
      max="1"
      min="0"
      step="0.01"
      type="range"
      value="0"
    />
    <div
      class="text-gray-600 text-sm"
    >
      Volume: 
      0
      %
    </div>
  </div>
</div>
`;

exports[`VolumeControl renders with default volume 1`] = `
<div>
  <div
    class="flex flex-col items-center space-y-2"
  >
    <input
      class="w-32 h-2 bg-blue-400 rounded-lg appearance-none focus:outline-none focus:ring-2 focus:ring-blue-300"
      max="1"
      min="0"
      step="0.01"
      type="range"
      value="50"
    />
    <div
      class="text-gray-600 text-sm"
    >
      Volume: 
      5000
      %
    </div>
  </div>
</div>
`;
